# swagger_server/models/__init__.py
@@ -3,10 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.access_token import AccessToken
-from swagger_server.models.access_token_refreshed import AccessTokenRefreshed
 from swagger_server.models.api_response import ApiResponse
 from swagger_server.models.credentials import Credentials
 from swagger_server.models.user import User
-from swagger_server.models.user_with_out_id import UserWithOutId
-from swagger_server.models.user_with_out_password import UserWithOutPassword
+from swagger_server.models.password import Password
